--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Germes:Техника бытовая,
-  "short_name": "Germes:Техника бытовая",
+  "name": "Germes:Бытовая техника,
+  "short_name": "Germes:Бытовая техника",
   "start_url": "/germes/",
   "display": "standalone",
   "background_color": "#ffffff",
