--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Germes:Бытовая техника,
-  "short_name": "Germes:Бытовая техника",
+  "name": "Бытовая техника по лучшим ценам",
+  "short_name": "Germes-Бытовая техника",
   "start_url": "/germes/",
   "display": "standalone",
   "background_color": "#ffffff",
