--- a/manifest.json
+++ b/manifest.json
@@ -3,8 +3,8 @@
   "short_name": "Germes-Бытовая техника",
   "start_url": "/germes/",
   "display": "standalone",
-  "background_color": "#ffffff",
-  "theme_color": "#ffffff",
+  "background_color": "#00000",
+  "theme_color": "#00000",
   "icons": [
     {
       "src": "/germes/icon-192.png",
